feat:1.自定义登录隐私政策弹框，样式美化，增加功能，优化用户体验。

--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -43,6 +43,7 @@
             </button>
         </view>
     </view>
+<modal-login-privacy-agreement showModal="{{showModal}}" bind:confirm="onConfirm" bind:cancel="onCancel"></modal-login-privacy-agreement>
 
 
 
