--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,28 +1,37 @@
 <!--index.wxml-->
-<custom-header title="{{ title }}" backgroundColor="{{backgroundColor}}" leftIconType="{{leftIconType}}" bind:goBack="goBack" />
-<scroll-view class="scrollarea" scroll-y type="list">
-  <view class="container">
-    <view class="userinfo">
-      <block wx:if="{{canIUseNicknameComp && !hasUserInfo}}">
-        <button class="avatar-wrapper" open-type="chooseAvatar" bind:chooseavatar="onChooseAvatar">
-          <image class="avatar" src="{{userInfo.avatarUrl}}"></image>
-        </button>
-        <view class="nickname-wrapper">
-          <text class="nickname-label">昵称</text>
-          <input type="nickname" class="nickname-input" placeholder="请输入昵称" bind:change="onInputChange" />
+    <view class="container">
+        <custom-header title="{{ title }}" backgroundColor="{{backgroundColor}}" leftIconType="{{leftIconType}}"
+                       bind:goBack="goBack"/>
+        <view class="swiper-container">
+            <swiper class="swiper-content" indicator-dots="{{indicatorDots}}"
+                    autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
+                <block wx:for="{{tpList}}" wx:key="*this" wx:for-item="tpTeam" id="{{tpTeam.id}}">
+                    <swiper-item>
+                        <image class="swiperImg" src="{{tpTeam.img_url}}" mode="scaleToFill"></image>
+                    </swiper-item>
+                </block>
+            </swiper>
         </view>
-      </block>
-      <block wx:elif="{{!hasUserInfo}}">
-        <button wx:if="{{canIUseGetUserProfile}}" bindtap="getUserProfile"> 获取头像昵称 </button>
-        <view wx:else> 请使用2.10.4及以上版本基础库 </view>
-      </block>
-      <block wx:else>
-        <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-        <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-      </block>
+        <view class="userinfo">
+            <block wx:if="{{canIUseNicknameComp && !hasUserInfo}}">
+                <button class="avatar-wrapper" open-type="chooseAvatar" bind:chooseavatar="onChooseAvatar">
+                    <image class="avatar" src="{{userInfo.avatarUrl}}"></image>
+                </button>
+                <view class="nickname-wrapper">
+                    <text class="nickname-label">昵称</text>
+                    <input type="nickname" class="nickname-input" placeholder="请输入昵称" bind:change="onInputChange"/>
+                </view>
+            </block>
+            <block wx:elif="{{!hasUserInfo}}">
+                <button wx:if="{{canIUseGetUserProfile}}" bindtap="getUserProfile">获取头像昵称</button>
+                <view wx:else>请使用2.10.4及以上版本基础库</view>
+            </block>
+            <block wx:else>
+                <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
+                <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+            </block>
+        </view>
+        <view class="usermotto">
+            <text class="user-motto">{{motto}}</text>
+        </view>
     </view>
-    <view class="usermotto">
-      <text class="user-motto">{{motto}}</text>
-    </view>
-  </view>
-</scroll-view>
