--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,62 +1,95 @@
 /**index.wxss**/
 page {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-.scrollarea {
-  flex: 1;
-  overflow-y: hidden;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
+.scrollarea {
+    flex: 1;
+    overflow-y: hidden;
+}
+
+.container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+}
+
+.swiper-container {
+    height: 300rpx;
+    width: 100%;
+    padding: 0 36rpx 0;
+    box-sizing: border-box; /* 明确设置 box-sizing */
+}
+
+.swiper-content {
+    height: 300rpx;
+    width: 100%;
+}
+
+.swiper-item {
+    border-radius: 16rpx;
+    height: 100%;
+    width: 100%;
+    background: red;
+}
+.swiperImg{
+    width:100%;
+    height: 300rpx;
+}
 .userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: #aaa;
-  width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #aaa;
+    width: 80%;
 }
 
 .userinfo-avatar {
-  overflow: hidden;
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+    overflow: hidden;
+    width: 128rpx;
+    height: 128rpx;
+    margin: 20rpx;
+    border-radius: 50%;
 }
 
 .usermotto {
-  margin-top: 200px;
+    margin-top: 200px;
 }
 
 .avatar-wrapper {
-  padding: 0;
-  width: 56px !important;
-  border-radius: 8px;
-  margin-top: 40px;
-  margin-bottom: 40px;
+    padding: 0;
+    width: 56px !important;
+    border-radius: 8px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .avatar {
-  display: block;
-  width: 56px;
-  height: 56px;
+    display: block;
+    width: 56px;
+    height: 56px;
 }
 
 .nickname-wrapper {
-  display: flex;
-  width: 100%;
-  padding: 16px;
-  box-sizing: border-box;
-  border-top: .5px solid rgba(0, 0, 0, 0.1);
-  border-bottom: .5px solid rgba(0, 0, 0, 0.1);
-  color: black;
+    display: flex;
+    width: 100%;
+    padding: 16px;
+    box-sizing: border-box;
+    border-top: .5px solid rgba(0, 0, 0, 0.1);
+    border-bottom: .5px solid rgba(0, 0, 0, 0.1);
+    color: black;
 }
 
 .nickname-label {
-  width: 105px;
+    width: 105px;
 }
 
 .nickname-input {
-  flex: 1;
+    flex: 1;
 }
