--- a/components/custom-header/custom-header.wxml
+++ b/components/custom-header/custom-header.wxml
@@ -1,6 +1,5 @@
-<view style="height: {{ statusBarHeight }}px;"></view>
 <view class="custom-header"
-      style="height: {{navigationBarHeight}}px;background-color: {{backgroundColor}};color: {{ titleColor }}; ">
+      style="height: {{navigationBarHeight}}px;background-color: {{backgroundColor}};color: {{ titleColor }}; padding-top: {{ statusBarHeight }}px;">
     <view class="header-left" bindtap="goBack">
         <image src="../../static/img/left-c.png" wx:if="{{ leftIconType === 'back' }}" class="left-c"></image>
         <image src="../../static/img/home-b.png" wx:if="{{ leftIconType === 'home' }}" class="home-c"></image>
