--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -5,25 +5,19 @@ page {
     flex-direction: column;
     width: 100%;
 }
-
-.scrollarea {
-    flex: 1;
-    overflow-y: hidden;
-}
-
 .container {
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    box-sizing: border-box;
 }
 
 .swiper-container {
     height: 300rpx;
     width: 100%;
-    padding: 30rpx 36rpx 0;
+    padding: 0 36rpx 0;
+    margin-top: 30rpx;
     box-sizing: border-box; /* 明确设置 box-sizing */
 }
 
@@ -36,12 +30,52 @@ page {
     border-radius: 16rpx;
     height: 100%;
     width: 100%;
-    background: red;
 }
-.swiperImg{
-    width:100%;
+
+.swiperImg {
+    width: 100%;
     height: 300rpx;
 }
+.tab-list {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+    flex-flow: wrap;
+    padding: 38rpx 49rpx 0;
+}
+
+.tab-item {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    margin-top: 23rpx;
+    text-align: center;
+    width: 25%;
+    justify-content: center;
+    align-items: center;
+    font-size: 24rpx;
+    color:#424242;
+}
+
+.tab-icon {
+    width: 123rpx;
+    height: 123rpx;
+    margin: 0 auto;
+}
+
+.tab-item-active {
+    background-color: #f5a623;
+    color: white;
+}
+
+.tab-item-active:after {
+    content: "";
+    display: block;
+    width: 100%;
+}
+
 .userinfo {
     display: flex;
     flex-direction: column;
