--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -5,6 +5,7 @@ page {
     flex-direction: column;
     width: 100%;
 }
+
 .container {
     height: 100%;
     display: flex;
@@ -36,6 +37,7 @@ page {
     width: 100%;
     height: 300rpx;
 }
+
 .tab-list {
     box-sizing: border-box;
     display: flex;
@@ -43,10 +45,11 @@ page {
     align-items: center;
     flex-direction: row;
     flex-flow: wrap;
-    padding: 38rpx 49rpx 0;
+    padding: 15rpx 49rpx 0;
 }
 
 .tab-item {
+    padding-top: 8rpx;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -56,12 +59,12 @@ page {
     justify-content: center;
     align-items: center;
     font-size: 24rpx;
-    color:#424242;
+    color: #424242;
 }
 
 .tab-icon {
-    width: 123rpx;
-    height: 123rpx;
+    width: 115rpx;
+    height: 115rpx;
     margin: 0 auto;
 }
 
@@ -127,3 +130,35 @@ page {
 .nickname-input {
     flex: 1;
 }
+
+.customer_service {
+    padding:66rpx 0;
+}
+
+.customer_service text{
+    font-size: 25rpx;
+    color: #8D8D8D;
+}
+.customer_phone {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.customer_phone image {
+    width: 23rpx;
+    height: 23rpx;
+}
+
+.customer_phone text {
+    line-height: 1;
+    margin-left: 7rpx;
+    font-size: 25rpx;
+    color: #424242;
+}
+.customer_company{
+    font-size: 25rpx;
+    color: #8D8D8D;
+    text-align: center;
+}
+
